[package]
name = "futures-sink-preview"
edition = "2018"
version = "0.3.0-alpha.16"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://rust-lang-nursery.github.io/futures-rs"
documentation = "https://rust-lang-nursery.github.io/futures-api-docs/0.3.0-alpha.16/futures_sink"
description = """
The asynchronous `Sink` trait for the futures-rs library.
"""

[lib]
name = "futures_sink"

[features]
std = ["alloc_feature", "futures-core-preview/std", "futures-channel-preview/std"]
default = ["std"]
nightly = ["futures-core-preview/nightly"]
alloc_feature  = ["futures-core-preview/alloc_feature"]

# For std building
rustc-internal-api = []
rustc-dep-of-std = ["core", "compiler_builtins", "alloc", "rustc-internal-api", "futures-core-preview/rustc-dep-of-std", "futures-channel-preview/rustc-dep-of-std"]

[dependencies]
futures-core-preview = { path = "../futures-core", version = "=0.3.0-alpha.16", default-features = false }
futures-channel-preview = { path = "../futures-channel", version = "=0.3.0-alpha.16", default-features = false }

# When built as part of libstd
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.16", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }