[package]
name = "futures-preview"
edition = "2018"
version = "0.3.0-alpha.16"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["futures", "async", "future"]
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://rust-lang-nursery.github.io/futures-rs"
documentation = "https://rust-lang-nursery.github.io/futures-api-docs/0.3.0-alpha.16/futures"
description = """
An implementation of futures and streams featuring zero allocations,
composability, and iterator-like interfaces.
"""
categories = ["asynchronous"]

[lib]
name = "futures"

[badges]
travis-ci = { repository = "rust-lang-nursery/futures-rs" }
appveyor = { repository = "rust-lang-nursery/futures-rs" }

[dependencies]
futures-core-preview = { path = "../futures-core", version = "=0.3.0-alpha.16", default-features = false }
futures-channel-preview = { path = "../futures-channel", version = "=0.3.0-alpha.16", default-features = false }
futures-executor-preview = { path = "../futures-executor", version = "=0.3.0-alpha.16", default-features = false }
futures-io-preview = { path = "../futures-io", version = "=0.3.0-alpha.16", default-features = false }
futures-sink-preview = { path = "../futures-sink", version = "=0.3.0-alpha.16", default-features = false }
futures-util-preview = { path = "../futures-util", version = "=0.3.0-alpha.16", default-features = false }

# When built as part of libstd
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "=0.1.16", optional = true }
# the top crate doesn't depends on alloc directly, we just ensure this is applied in every subproject.
#alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[dev-dependencies]
pin-utils = "0.1.0-alpha.4"
futures-test-preview = { path = "../futures-test", version = "=0.3.0-alpha.16" }
tokio = "0.1.11"

[features]
nightly = ["futures-core-preview/nightly", "futures-sink-preview/nightly", "futures-util-preview/nightly"]
std = ["alloc_feature", "futures-core-preview/std", "futures-executor-preview/std", "futures-io-preview/std", "futures-sink-preview/std", "futures-util-preview/std"]
async-await = ["futures-util-preview/async-await"]
default = ["std"]
compat = ["std", "futures-util-preview/compat"]
io-compat = ["compat", "futures-util-preview/io-compat"]
cfg-target-has-atomic = ["futures-core-preview/cfg-target-has-atomic", "futures-util-preview/cfg-target-has-atomic"]
never-type = ["futures-util-preview/never-type"]
alloc_feature  = ["futures-core-preview/alloc_feature", "futures-sink-preview/alloc_feature", "futures-util-preview/alloc_feature"]

# For std building
rustc-internal-api = []
rustc-dep-of-std = [
                    "core",
                    "compiler_builtins",
                    "rustc-internal-api",
                    "futures-core-preview/rustc-dep-of-std",
                    "futures-channel-preview/rustc-dep-of-std",
                    "futures-executor-preview/rustc-dep-of-std",
                    "futures-io-preview/rustc-dep-of-std",
                    "futures-sink-preview/rustc-dep-of-std",
                    "futures-util-preview/rustc-dep-of-std"
                    ]
